Fixed videos overlapping text

--- a/static/css/news.less
+++ b/static/css/news.less
@@ -70,7 +70,6 @@
 }
 
 .news video {
-  margin-top: 35px;;
   text-align: center;
   width: 100%;
   height: 50%;
